# Finvista

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  LICENSE  QUICK_START.md  README.md  README_UPDATES.md  ROADMAP.md  Start_Finvista_API.bat  evaluate_pricing_model.py  pyproject.toml  render.yaml  requirements.txt  run.py  train_test_ml_pricing.py
alembic/: env.py
configs/: macro_indicators.json  opt_cw_params.json  paper_portfolio.json  sector_mapping.json  telegram_config.json  telegram_hub_state.json  underlying_hv_cache.json
docs/: 01-saas-architecture-blueprint.md  02-unified-integration-plan.md  03-financial-distress-roadmap.md  04-chuong-5-phan-tich-tai-chinh.md  04-roadmap.md  05-bao-cao-nhom-extracted.md  05-cw-metrics-handbook.md  06-quick-start.md  07-modern-data-stack-architecture.md  08-golden-modern-architecture.md  09-credit-distress-audit.md  README.md  telegram_webhook_setup.md
experiments/: audit_distress_comparison.py  cross_validate_distress.py  evaluate_news_impact.py  trigger_ai_analysis.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
prompts/: Analyst_Prompt.md  Bug_Fix.md  Code_Review.md  Feature_Request.md  README.md  Refactor.md
scripts/: e2e_validation.py  migrate_to_supabase.py  run_credit_risk.py  run_cw.py  run_cw_history.py  run_paper_trader.py  setup_telegram_webhook.py  test_order.py
src/: __init__.py
tests/: test_ai_integration.py  test_analyst.py  test_annual_reports.py  test_api.py  test_credit_health.py  test_kalman_filter.py  test_pricing.py  test_regime_portfolio.py  test_warrant_service.py
tools/: detect_chat_id.py  inspect_images.py  read_pdf.py  (+2 more)
(+462 files in other folders)
